In all my haste getting ready for siggraph I completely forgot to update the changelog and version for sonix.  Patrick's friendly email posting today reminded me that I hadn't done this yet
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13359 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/sonix/ChangeLog
+++ b/juggler/modules/sonix/ChangeLog
@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jul-24-2003 browner     Added the audiere plugin.  this required the
+                        modification of the SoundInfo struct for a streaming
+                        flag - which means we now support streaming apis
+                        NEW VERSION: 0.2.2
 Oct-25-2002 patrickh    Replaced use of snx::Singleton<T> with the thread-safe
                         vpr::Singleton<T>.  The header snx/Singleton.h has
                         been removed from the source tree.
