Added a comment to the ChangeLog and bumped the version since RTRC works once again.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13365 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/ChangeLog
+++ b/juggler/modules/jackal/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Aug-15-2003 aronb       Fixed RTRC so that it now works with vrjconfig.
 Jul-10-2003 patrickh    Removed the ConfigUpdater utility.
 Jul-10-2003 nonchocoboy Merged everything from jccl_config_refactor_branch.
                         Among other things, this officially renames "config
