Refactor:	The built-in Service Beans are now accessed via proxy 		objects that greatly simplify the process of acquiring the 		Service Bean reference.  This is modeled after Ben's work 		in the JCCL config Beans--specifically the ConfigBroker.
Bumped version to 0.15 due to changes in the EnvironmentService interface.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13373 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/ChangeLog
+++ b/juggler/modules/tweek/ChangeLog
@@ -1,6 +1,10 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
-2004-08-12 patrickh    The method getBean() in the class
+2003-08-16 patrickh    Refactored the built-in Tweek Service Beans to be
+                       accessed via proxies.  This makes acquisition of the
+                       service reference dramatically simpler.
+                       NEW VERSION: 0.15.0
+2003-08-12 patrickh    The method getBean() in the class
                        org.vrjuggler.tweek.beans.BeanInstantiationEvent is now
                        getTweekBean().
                        NEW VERSION: 0.14.0
