Updated to version 0.15 of the Tweek Java API.  Bumped version to 0.12.2.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13374 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/ChangeLog
+++ b/juggler/modules/jackal/ChangeLog
@@ -1,6 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Aug-16-2003 patrickh    Updated to Tweek 0.15.
+                        NEW VERSION: 0.12.2
 Aug-15-2003 aronb       Fixed RTRC so that it now works with vrjconfig.
+                        NEW VERSION: 0.12.1
 Jul-10-2003 patrickh    Removed the ConfigUpdater utility.
 Jul-10-2003 nonchocoboy Merged everything from jccl_config_refactor_branch.
                         Among other things, this officially renames "config
