Updated to version 0.15 of the Tweek Java API.  Bumped version to 0.13.1.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13375 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/ChangeLog
+++ b/juggler/modules/gadgeteer/ChangeLog
@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Aug-16-2003 patrickh    Updated to Tweek 0.15.
+                        NEW VERSION: 0.13.1
 Jul-10-2003 nonchocoboy Updated to JCCL 0.12.0 API for both Java and C++.
                         NEW VERSION: 0.13.0
 Jun-25-2003 patrickh    Allow the use of X11 on Mac OS X instead of the Carbon
