Updated to version 0.15 of the Tweek Java API.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13376 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/ChangeLog
+++ b/juggler/modules/vrjuggler/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Aug-16-2003 patrickh    VRJConfig now depends on Tweek 0.15.
 Jul-10-2003 nonchocoboy Updated to JCCL 0.12.0 API for both Java and C++.
                         This involved breaking vrj-chunks.desc into individual
                         files for each configuration definition.
