New feature:	vrj::OsgApp can be exposed so that Python application 		objects can derive from it and make use of PyOSG.
The bindings for vrj::OsgApp are compiled optionally and depend on an
installation of OSG.  Note that this has not been tested other than to
verify that it does compile correctly.

Bumped version to 0.8.1.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13382 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/ChangeLog
+++ b/PyJuggler/ChangeLog
@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Aug-18-2003 patrickh    Exposed vrj::OsgApp so that developers can combine
+                        PyJuggler and PyOSG.
+                        NEW VERSION: 0.8.1
 Aug-03-2003 patrickh    Updated to JCCL 0.12, Gadgeteer 0.13, and VR Juggler
                         1.1.144.
                         NEW VERSION: 0.8.0
