It turns out that the official Python build for Win32 prefers that modules use the extension .pyd instead of .dll.  This handy feature prevents runtime loader clashes between a DLL and a Python extension module.  With this knowledge, I am going back to having PyJuggler split up into multiple Python module files (with the .pyd extension on Windows and .so on UNIX). I prefer this because the way I was doing things in the single file was a little questionable.  This approach is also more flexible for users who only want to load specific pieces of PyJuggler into their Python applications.
Bumped version to 0.8.2.  As before when the code was combined into a
single module file, there are no changes required to user code.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13389 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/ChangeLog
+++ b/PyJuggler/ChangeLog
@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Aug-20-2003 patrickh    Split PyJuggler back up into multiple Python modules.
+                        On Windows, the modules have the extension .pyd.
+                        NEW VERSION: 0.8.2
 Aug-18-2003 patrickh    Exposed vrj::OsgApp so that developers can combine
                         PyJuggler and PyOSG.
                         NEW VERSION: 0.8.1
