Add the "JGoodies Looks" Swing look and feel to the mix.  The pre-compiled JAR file comes from external/swing-laf/jgoodies-looks.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13406 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/ChangeLog
+++ b/juggler/modules/tweek/ChangeLog
@@ -1,5 +1,6 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2003-08-23 patrickh    Added the JGoodies Looks Swing look and feel.
 2003-08-16 patrickh    Refactored the built-in Tweek Service Beans to be
                        accessed via proxies.  This makes acquisition of the
                        service reference dramatically simpler.
