--- a/modules/vrjuggler/ChangeLog
+++ b/modules/vrjuggler/ChangeLog
@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Aug-25-1003 aronb       Fixed a bug in PfDrawManager which was causing the
+                        optimized build to go into an endless loop while running
+                        a Performer application.
 Aug-16-2003 patrickh    VRJConfig now depends on Tweek 0.15.
 Jul-10-2003 nonchocoboy Updated to JCCL 0.12.0 API for both Java and C++.
                         This involved breaking vrj-chunks.desc into individual
