Noted Allen's addition of vpr::SystemBase::getStackTrace().  Bumped version to 0.27.7.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13442 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2003-08-31 allenb   Added vpr::SystemBase::getStackTrace().
+                    NEW VERSION: 0.27.7
 2003-08-11 patrickh Added vpr::LibraryLoader.
                     NEW VERSION: 0.27.6
 2003-06-30 aronb    Added new debug output level vprDBG_CONFIG_STATUS_LVL.
