--- a/modules/vapor/ChangeLog
+++ b/modules/vapor/ChangeLog
@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2003-08-31 allenb   Added vpr::SystemBase::getStackTrace().
+                    NEW VERSION: 0.27.7
 2003-08-11 patrickh Added vpr::LibraryLoader.
                     NEW VERSION: 0.27.6
 2003-06-30 aronb    Added new debug output level vprDBG_CONFIG_STATUS_LVL.
