New feature:	vprASSERT now prints stack trace (where supported). Refactor:	Refined stack trace output slightly
Stack trace output now prints the depth of the call in the stack trace.  It also attempts to place each call stack entry on a single continuous line (no newlines).


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13444 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2003-08-31 allenb   Refactored vprASSERT to print stacktrace.  Refined stack
+                    trace output slightly.
+                    NEW VERSION: 0.27.8
 2003-08-31 allenb   Added vpr::SystemBase::getStackTrace().
                     NEW VERSION: 0.27.7
 2003-08-11 patrickh Added vpr::LibraryLoader.
