Mark the 2.0 Alpha 2 release.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_2_BRANCH@13453 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/ChangeLog
+++ b/juggler/modules/vrjuggler/ChangeLog
@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+
+[2.0 Alpha 2 released - 7.1.2003]==============================================
+Jul-01-2003 aronb       NEW VERSION: 1.1.143
 Jun-25-2003 patrickh    Allow the use of X11 and GLX on Mac OS X instead of
                         Carbon and the OpenGL framework.
                         NEW VERSION: 1.1.142
