Dropped support for Draft 4 of the Pthreads standard.  Platforms that do not implement Draft 10 will have to use NSPR.  As far as I know, that is only HP-UX 10.20, and we already require the use of NSPR on that OS.  At this point, the Draft 4 code just isn't worth keeping.
Bumped version to 0.27.11.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13485 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2003-09-15 patrickh Dropped support for Draft 4 of the POSIX threads standard.
+                    NEW VERSION: 0.27.11
 2003-09-10 allenb   Extended object reader interface to support push/pop
                     of current read state.
                     NEW VERSION: 0.27.10
