New feature:	The new method vpr::LibraryLoader::findAndInitDSO() will 		search for a DSO based on a platform-independent "base 		name" and a path.  The platform-dependent details are 		maintained inside vpr::LibraryLoader. Refactor:	vpr::LibraryLoader::findAndInitDSO() now takes a callable 		object (a Boost.Function instance) that it uses as a 		callback.  This is done instead of requiring that the 		initialization/factory function for a DSO have a specific 		signature.  Now, it is the responsibility of the calling 		code to handle the specfics of invoking the entry point 		into the DSO.
The "platform-specifc" details mentioned above include the file extension
for DSOs (.dll, .so, or .dylib) and whether a debug or an optimized version
should be released.  A debug build of vpr::LibraryLoader will search for
debug DSOs; an optmized build will search for optimized DSOs.  Debug versions
are characterized by having "_d" appended to their base name.  The actual
binary issues are the responsibility of the developer.  This is being done
to help alleviate compatibility problems with debug/release code generated
by Visual C++.  Note that only vpr::LibraryLoader::findAndInitDSO() makes
use of this convention.

A collection of tests has been added for vpr::LibraryLoader.

Suggested by:	allenb
Reviewed by:	allenb, aronb, browner10 (at least the initial ideas)


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13507 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2003-09-18 patrickh Refactored vpr::LibraryLoader to use Boost.Function as a
+                    callback mechanism for initializing DSOs.
+                    NEW VERSION: 0.28.0
 2003-09-18 allenb   Changed the std::string constructor in vpr::GUID to be
                     explicit.  This eliminates some autoconversion issues.
 2003-09-15 patrickh Dropped support for Draft 4 of the POSIX threads standard.
