--- a/modules/vapor/ChangeLog
+++ b/modules/vapor/ChangeLog
@@ -2,6 +2,8 @@ DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
 2003-09-18 patrickh Refactored vpr::LibraryLoader to use Boost.Function as a
                     callback mechanism for initializing DSOs.
+                    Removed vpr::DsoLoader, which has been superceded by
+                    vpr::LibraryLoader.
                     NEW VERSION: 0.28.0
 2003-09-18 allenb   Changed the std::string constructor in vpr::GUID to be
                     explicit.  This eliminates some autoconversion issues.
