Removed vpr::DsoLoader.  It was a class I wrote about five months ago and forgot about entirely.  At this point, it has been superceded (for the most part) by the superior vpr::LibraryLoader class.  There is no point in having both around.
Bumped version to 0.28 (also for the API change in vpr::LibraryLoader).


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13509 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -2,6 +2,8 @@ DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
 2003-09-18 patrickh Refactored vpr::LibraryLoader to use Boost.Function as a
                     callback mechanism for initializing DSOs.
+                    Removed vpr::DsoLoader, which has been superceded by
+                    vpr::LibraryLoader.
                     NEW VERSION: 0.28.0
 2003-09-18 allenb   Changed the std::string constructor in vpr::GUID to be
                     explicit.  This eliminates some autoconversion issues.
