Changed the semantics of GlobalPreferencesService.getChooserStartDir() so that it always returns a path instead of possibly returning a symbolic string that would need to be converted into a path.  This alleviates unnecessary repetitive work on the part of the code using the Global Preferences Service.
Bumped version to 0.16.0 for this change and the removal of the
Emacs/Windows chooser open style preference.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13524 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/ChangeLog
+++ b/juggler/modules/tweek/ChangeLog
@@ -1,5 +1,10 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2003-09-19 patrickh    Removed the Emacs/Windows file chooesr open style
+                       preference.  Changed the semantics of
+                       GlobalPreferencesService.getChooserStartDir() to return
+                       a path instead of a symbolic string.
+                       NEW VERSION: 0.16.0
 2003-08-25 aronb       Added a BeanStatus dialog box that shows all loaded beans
                        and beans that are waiting for dependancies. It also
                        shows details such as JAR URL, Class Name, and deps.
