--- a/modules/vrjuggler/ChangeLog
+++ b/modules/vrjuggler/ChangeLog
@@ -1,6 +1,12 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
 
+[2.0 Alpha 2 released - 9.22.2003]==============================================
+Sep-22-2003 aronb       NEW VERSION: 1.1.144
+Aug-25-1003 aronb       Fixed a bug in PfDrawManager which was causing the
+                        optimized build to go into an endless loop while running
+                        a Performer application.
+
 [2.0 Alpha 2 released - 7.1.2003]==============================================
 Jul-01-2003 aronb       NEW VERSION: 1.1.143
 Jun-25-2003 patrickh    Allow the use of X11 and GLX on Mac OS X instead of
