Fixed my mistakes while trying to make VR Juggler Alpha 3. Patrick has pointed out that we should not be using the version number 1.1.144 since it already exists in the HEAD branch. So I have changed it to be 1.1.143-1. Also Patrick pointed out that I should not update the frozen dates in Gatherrc since we have not tested any of the updates to these external dependancies with this branch.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_2_BRANCH@13551 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/RELEASE_NOTES.txt
+++ b/juggler/modules/vrjuggler/RELEASE_NOTES.txt
@@ -10,7 +10,7 @@ For all versions:
 
 ===============================================================================
 
-Version: 2.0 Alpha 3 (1.1.144)
+Version: 2.0 Alpha 3 (1.1.143-1)
 Released: September 22, 2003
     
     Please refer to the following to get started with VR Juggler 2.0 Alpha 3:
