--- a/juggler/modules/vrjuggler/ChangeLog
+++ b/juggler/modules/vrjuggler/ChangeLog
@@ -2,7 +2,10 @@ DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
 
 [2.0 Alpha 2 released - 9.22.2003]==============================================
-Sep-22-2003 aronb       NEW VERSION: 1.1.144
+Sep-22-2003 aronb       NEW VERSION: 1.1.143-1
+                        This version was chosen rather than 1.1.144 since we are
+                        making the VR Juggler 2.0 Alpha 3 from the
+                        VRJ_2_0_ALPHA_2_BRANCH branch.
 Aug-25-1003 aronb       Fixed a bug in PfDrawManager which was causing the
                         optimized build to go into an endless loop while running
                         a Performer application.
