Added jccl::ConfigElement::getVersion() for querying the version number of a given configuration element.  I thought that this was already implemented, but I guess not.
Bumped version to 0.12.3.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13594 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/ChangeLog
+++ b/juggler/modules/jackal/ChangeLog
@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-06-2003 patrickh    Added jccl::ConfigElement::getVersion().
+                        NEW VERSION: 0.12.3
 Aug-16-2003 patrickh    Updated to Tweek 0.15.
                         NEW VERSION: 0.12.2
 Aug-15-2003 aronb       Fixed RTRC so that it now works with vrjconfig.
