--- a/modules/vrjuggler/ChangeLog
+++ b/modules/vrjuggler/ChangeLog
@@ -1,5 +1,10 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-06-2003 allenb      Fixed bug where resizing of glx windows was not
+                        updating projection information for the display.
+                        Added code to allow glx windows to be closed at
+                        run-time.  This needs more testing.
+                        NEW VERSION: 1.1.147
 Sep-15-2003 patrick     Renamed the libraries Juggler, Juggler_ogl, and
                         Juggler_pf to vrj, vrj_ogl, and vrj_pf respectively.
                         NEW VERSION: 1.1.146
