Refactor:	Change Input interface methods startSampling, stopSampling, and sample to return bools.
This refactoring fixes a long standing sore spot in the Input interface.  It finally bothered me enough that I fixed it.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13655 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/ChangeLog
+++ b/juggler/modules/gadgeteer/ChangeLog
@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-12-2003 allenb      Refactored Input interface methods startSampling,
+                        stopSampling, and sample to return bools.
+                        NEW VERSION: 0.14.0
 Sep-18-2003 patrickh    Updated to VPR 0.28.
                         NEW VERSION: 0.13.2
 Aug-16-2003 patrickh    Updated to Tweek 0.15.
