New feature:	Linux joystick driver support
This change adds a new driver for Linux joysticks using the the kernel joystick driver interface (joydev).  This allows for use
of gameport, serial, and usb joysticks under Linux.

Submitted by:	Allen Bierbaum
Obtained from:	under contract of John Deere


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13657 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/ChangeLog
+++ b/juggler/modules/gadgeteer/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-12-2003 allenb      Added driver for Linux joystick devices.
 Oct-12-2003 allenb      Refactored Input interface methods startSampling,
                         stopSampling, and sample to return bools.
                         NEW VERSION: 0.14.0
