--- a/juggler/modules/gadgeteer/ChangeLog
+++ b/juggler/modules/gadgeteer/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-27-2003 allenb      Fixed bug with FOB on Linux. RTS was always high.
 Oct-12-2003 allenb      Added driver for Linux joystick devices.
 Oct-12-2003 allenb      Refactored Input interface methods startSampling,
                         stopSampling, and sample to return bools.
