New feature:	Backport of extended serial interface to support direct setting/getting of serial line status.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_2_BRANCH@13716 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2003-10-27 allenb   [FROM HEAD] Extended serial port interface.  There is now 
+                    support for getting/setting various terminal lines.
 2003-06-30 aronb    Added new debug output level vprDBG_CONFIG_STATUS_LVL.
                     Changed the ordering of the levels so vprDBG_WARNING_LVL
                     comes after vprDBG_CRITICAL_LVL and vprDBG_CONFIG_LVL
