New feature:	The CORBA-based remote run-time reconfiguration code is now 		loaded dynamically as a plug-in. SF Bug#:	694507
With this change, there is no longer a need to enable the CORBA RTRC code
manually at configuration time.  If the Tweek C++ API is available, the
plug-in is compiled.  If it isn't, the plug-in is skipped.  If the plug-in
is available at run time, then an attempt is made to load it.  No changes
have to be made to the linker flags used to link applications, and users
do not have to have omniORB (or any other C++ CORBA implementation)
installed to be able to run VR Juggler applications.

Bumped version to 0.14.0.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13823 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/ChangeLog
+++ b/juggler/modules/jackal/ChangeLog
@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-09-2003 patrickh    Refactored the CORBA-based remote run-time
+                        reconfiguration code so that it can be loaded at
+                        run-time as a plug-in.
+                        NEW VERSION: 0.14.0
 Nov-04-2003 patrickh    Removed the storage of multiple versions of individaul
                         configuration definitions in
                         jccl::ConfigDefinitionRepository.
