Noote the transition from Doozer++ 1.5.x to Doozer++ 1.99.x.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13895 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/ChangeLog
+++ b/PyJuggler/ChangeLog
@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-23-2003 patrickh    Updated the Autoconf-based build system to use the
+                        Doozer++ HEAD branch.
 Sep-13-2003 patrickh    Added a Jamfile for easier compiling.
 Sep-07-2003 patrickh    Added separate debug and optimized build capabilities.
 Aug-31-2003 patrickh    Changed --with-bpldir to --with-boost-python.  The
