Moved the Sonix plug-ins from juggler/modules/sonix/snx/plugins to juggler/modules/sonix/plugins.  The Sonix plug-ins now have their own build system that is run after the Sonix build completes successfully. This new build system is based on the one used for JCCL and Gadgeteer plug-ins.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13944 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/sonix/ChangeLog
+++ b/juggler/modules/sonix/ChangeLog
@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-27-2003 patrickh    Moved the plug-in code from snx/plugins into plugins
+                        and gave the plug-ins their own build system.
 Nov-27-2003 patrickh    Rewrote the build system.
 Jul-24-2003 browner     Added the audiere plugin.  this required the
                         modification of the SoundInfo struct for a streaming
