Noted the addition of vrj::App::latePreFrame() and bumped the version to 1.1.148.  I need the version bump so that I can update PyJuggler.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14023 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/ChangeLog
+++ b/juggler/modules/vrjuggler/ChangeLog
@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Dec-07-2003 allenb      Added vrj::App::latePreFrame()
+                        NEW VERSION: 1.1.148
 Oct-06-2003 allenb      Fixed bug where resizing of glx windows was not
                         updating projection information for the display.
                         Added code to allow glx windows to be closed at
