Updated to VR Juggler 1.1.148.  This allows overriding of the new method vrj::App::latePreFrame().  Bumped version to 0.8.3.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14028 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/ChangeLog
+++ b/PyJuggler/ChangeLog
@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Dec-08-2003 patrickh    Updated to VR Juggler 1.1.148.
+                        NEW VERSION: 0.8.3
 Nov-23-2003 patrickh    Updated the Autoconf-based build system to use the
                         Doozer++ HEAD branch.
 Sep-13-2003 patrickh    Added a Jamfile for easier compiling.
