Noted the fixes for the Trackd driver.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/RELENG_1_0/juggler_1.0@14067 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 DATE        AUTHOR    CHANGE
 ----------- --------- ---------------------------------------------------------
+Dec-30-2003 patrickh  Fixed rotation errors and Gimbal Lock problems in the
+                      Trackd driver.
+
 [Version 1.0.7 - 4.30.2003]====================================================
 Oct-20-2002 patrickh  Use of the numeric keypad works on HP and Sun hardware.
                       Submitted by Fuel Tech Inc.
