Noted the removal of various free functions from jccl/Config/ParseUtil.h. I have bumped the version to 0.15.1 to mark this, although I sincerely doubt that any user-level code would be making use of the removed functions.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14080 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/ChangeLog
+++ b/juggler/modules/jackal/ChangeLog
@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Dec-31-2003 patrickh    Removed unneeded functions jccl::stringToVar(),
+                        jccl::hasSeparator(), jccl::getRemainder(), and
+                        jccl::getFirstNameComponent().
+                        NEW VERSION: 0.15.1
 Nov-17-2003 patrickh    The factory function for remote run-time
                         reconfiguration plug-ins now take a parameter that is
                         of type jccl::ConfigManager*.
