Note that the Performer Draw Manager now compiles on Windows.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/RELENG_1_0/juggler_1.0@14085 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR    CHANGE
 ----------- --------- ---------------------------------------------------------
+Jan-01-2003 patrickh  Ported the Performer Draw Manager to Windows.
 Dec-30-2003 patrickh  Fixed rotation errors and Gimbal Lock problems in the
                       Trackd driver.
 
