Note about Mutex change
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14129 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2004-01-10 allenb   Changed Mutex::test() method to be const.
+                    NEW VERSION: 0.32.3
 2003-11-12 patrickh Removed the vpr::GUID(const char*) constructor overload.
                     NEW VERSION: 0.32.2
 2003-11-05 patrickh Fixed a bug that prevented the termios abstraction from
